--- a/examples/nextjs/src/app/globals.css
+++ b/examples/nextjs/src/app/globals.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 body {
     background-image: linear-gradient(to bottom, #33bbff, #7a62f6);
     height: 100vh;
@@ -15,4 +11,22 @@ button {
     width: 70px;
     height: 70px;
     border-radius: 50%;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+section {
+    display: flex;
+    gap: 40px;
+    font-size: 40px;
+    align-items: center;
 }
