--- a/examples/nextjs/src/app/globals.css
+++ b/examples/nextjs/src/app/globals.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body {
     background-image: linear-gradient(to bottom, #33bbff, #7a62f6);
     height: 100vh;
     color: #fff;
     display: grid;
     place-items: center;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 button {
@@ -11,6 +16,9 @@ button {
     width: 70px;
     height: 70px;
     border-radius: 50%;
+    border: none;
+    color: #fff;
+    font-size: 40px;
 }
 
 main {
